Bug 1603371 - Use _GLIBCXX_RELEASE instead of __GLIBCXX__ r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D56956